--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "graphql": "^15.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@mui/styled-engine": "^5.0.1",
+    "@types/react-router-dom": "^5.3.1",
     "apollo": "^2.33.6"
   },
   "resolutions": {
