--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -51,7 +52,8 @@
   "devDependencies": {
     "@mui/styled-engine": "^5.0.1",
     "@types/react-router-dom": "^5.3.1",
-    "apollo": "^2.33.6"
+    "apollo": "^2.33.6",
+    "husky": "^7.0.2"
   },
   "resolutions": {
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
